# aoc23

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
data/puzzles/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  20.md  21.md  22.md  23.md  24.md  25.md
src/: lib.rs
src/puzzles/: config.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs  mod.rs
