[package]
name = "advent_of_code"
version = "0.0.1"
authors = ["Diederik Perdok"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
lazy_static = "1.4.0"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["openblas-system"] }
num-integer = "0.1.45"
pico-args = "0.5.0"
regex = "1.10.2"
rustc-hash = "1.1.0"
